[gd_scene load_steps=8 format=3 uid="uid://ycfv25l0xci6"]

[ext_resource type="Script" path="res://Scripts/Nested/buttonGame.gd" id="1_ptwsc"]
[ext_resource type="Texture2D" uid="uid://cbnnj5p41u2ec" path="res://Assets/Art/bttn-A.png" id="2_jwvek"]
[ext_resource type="Texture2D" uid="uid://bwtv3ensrs16" path="res://Assets/Art/bttn-B.png" id="3_rl5f0"]
[ext_resource type="Texture2D" uid="uid://i8p8vr0fpul3" path="res://Assets/Art/BaseIcon.png" id="4_hcvnn"]
[ext_resource type="Texture2D" uid="uid://cgmi2majakb8y" path="res://Assets/Art/EnemyIcon.png" id="5_bkvcu"]
[ext_resource type="Texture2D" uid="uid://cgy5wqaxbp1hd" path="res://Assets/Art/KeyIcon.png" id="6_upu1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq2nq"]
size = Vector2(180, 215)

[node name="BttnBaseGame" type="Control" node_paths=PackedStringArray("area")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_ptwsc")
area = NodePath("Area2D")

[node name="A" type="Sprite2D" parent="."]
texture = ExtResource("2_jwvek")

[node name="B" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_rl5f0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bq2nq")

[node name="BaseIcon" type="Sprite2D" parent="."]
texture = ExtResource("4_hcvnn")

[node name="EnemyIcon" type="Sprite2D" parent="."]
texture = ExtResource("5_bkvcu")

[node name="KeyIcon" type="Sprite2D" parent="."]
texture = ExtResource("6_upu1r")
